[package]
name = "libskills"
version = "0.1.0"
edition = "2021"
description = "CLI for the LibSkills ecosystem — Behavioral Knowledge Layer for Open-Source Libraries"
license = "Apache-2.0"
repository = "https://github.com/LibSkills/libskills-cli"

[[bin]]
name = "libskills"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.18"
colored = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
